[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id=1]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.07, 0.09, 0.12, 1)

[node name="MainPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.8

[node name="MenuContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
theme_override_constants/separation = 14

[node name="Title" type="Label" parent="MainPanel/MenuContainer"]
layout_mode = 2
text = "Open World Survival RPG"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="WorldSettingsPanel" type="PanelContainer" parent="MainPanel/MenuContainer"]
layout_mode = 2

[node name="WorldSettingsContainer" type="VBoxContainer" parent="MainPanel/MenuContainer/WorldSettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="WorldSettingsTitle" type="Label" parent="MainPanel/MenuContainer/WorldSettingsPanel/WorldSettingsContainer"]
layout_mode = 2
text = "World Settings"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="DifficultyRow" type="HBoxContainer" parent="MainPanel/MenuContainer/WorldSettingsPanel/WorldSettingsContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="DifficultyLabel" type="Label" parent="MainPanel/MenuContainer/WorldSettingsPanel/WorldSettingsContainer/DifficultyRow"]
layout_mode = 2
text = "Difficulty"

[node name="DifficultyOption" type="OptionButton" parent="MainPanel/MenuContainer/WorldSettingsPanel/WorldSettingsContainer/DifficultyRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NeedsToggle" type="CheckBox" parent="MainPanel/MenuContainer/WorldSettingsPanel/WorldSettingsContainer"]
layout_mode = 2
text = "Enable Needs"

[node name="MobsToggle" type="CheckBox" parent="MainPanel/MenuContainer/WorldSettingsPanel/WorldSettingsContainer"]
layout_mode = 2
text = "Enable Hostile Mobs"

[node name="RespawnToggle" type="CheckBox" parent="MainPanel/MenuContainer/WorldSettingsPanel/WorldSettingsContainer"]
layout_mode = 2
text = "Allow Respawn"

[node name="StarterKitToggle" type="CheckBox" parent="MainPanel/MenuContainer/WorldSettingsPanel/WorldSettingsContainer"]
layout_mode = 2
text = "Grant Starter Kit"

[node name="StartButton" type="Button" parent="MainPanel/MenuContainer"]
layout_mode = 2
text = "Start Game"

[node name="SettingsButton" type="Button" parent="MainPanel/MenuContainer"]
layout_mode = 2
text = "Options & Settings"

[node name="QuitButton" type="Button" parent="MainPanel/MenuContainer"]
layout_mode = 2
text = "Quit"

[node name="SettingsPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.2
anchor_top = 0.18
anchor_right = 0.8
anchor_bottom = 0.82
visible = false

[node name="SettingsContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 12

[node name="SettingsTitle" type="Label" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "Options & Settings"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="VolumeRow" type="HBoxContainer" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 12

[node name="VolumeLabel" type="Label" parent="SettingsPanel/SettingsContainer/VolumeRow"]
layout_mode = 2
text = "Master Volume"

[node name="VolumeSlider" type="HSlider" parent="SettingsPanel/SettingsContainer/VolumeRow"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.8
size_flags_horizontal = 3

[node name="FullscreenRow" type="HBoxContainer" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 12

[node name="FullscreenLabel" type="Label" parent="SettingsPanel/SettingsContainer/FullscreenRow"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenToggle" type="CheckBox" parent="SettingsPanel/SettingsContainer/FullscreenRow"]
layout_mode = 2
text = "Enabled"

[node name="BackButton" type="Button" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MainPanel/MenuContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainPanel/MenuContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainPanel/MenuContainer/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SettingsPanel/SettingsContainer/BackButton" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="SettingsPanel/SettingsContainer/VolumeRow/VolumeSlider" to="." method="_on_volume_changed"]
[connection signal="toggled" from="SettingsPanel/SettingsContainer/FullscreenRow/FullscreenToggle" to="." method="_on_fullscreen_toggled"]
